--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -247,7 +247,12 @@
         <div class="container">
           <div class="row">
             <div
-              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
+              class="
+                offset-xl-3
+                col-xl-6
+                offset-lg-2
+                col-lg-8 col-md-12 col-sm-12
+              "
             >
               <h1 class="inactive">I am Ayush a UI UX Designer</h1>
               <p
@@ -293,7 +298,7 @@
 
     <!-- ***** Engineering, Photography, <br />
                   Psychology, and now Designing ***** -->
-    <section class="section first-section" id="features">
+    <section class="section first-section mob-margin-negative" id="features">
       <div class="container">
         <div class="row">
           <div
@@ -301,18 +306,21 @@
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/ayush.webp"
+              src="assets/images/why-should-i-consult-you.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
-              width="400"
-              height="400"
-              title="I know my picture left probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
+              width="800"
+              height="600"
             />
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -360,24 +368,33 @@
     <!-- ***** Features Big Item End ***** -->
 
     <!-- ***** My Goals and Ambitions ***** -->
-    <section class="section first-section about-features">
+    <section class="section first-section about-features grey">
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-mobile
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/designing.webp"
+              src="assets/images/my-goals-and-ambitions.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
-              width="400"
-              height="400"
+              width="800"
+              height="600"
             />
           </div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -403,16 +420,21 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-desktop
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/designing.webp"
+              src="assets/images/my-goals-and-ambitions.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
-              width="400"
-              height="400"
+              width="800"
+              height="600"
             />
           </div>
         </div>
@@ -428,17 +450,21 @@
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/goals-and-ambitions.webp"
+              src="assets/images/what-i'm-currently-working-on.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
-              width="400"
-              height="400"
+              width="800"
+              height="600"
             />
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1672,17 +1698,21 @@
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/mentoring.webp"
+              src="assets/images/i-help-people-get-better-in-design.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto mentoring-mob"
               alt="App"
-              width="400"
-              height="400"
+              width="800"
+              height="600"
             />
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1699,7 +1729,7 @@
                 out at
                 <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me </a>
                 or let's chat on
-                <a href="https://www.linkedin.com/in/ayush-chandra/"
+                <a href="https://www.linkedin.com/in/designedbyayush/"
                   >LinkedIn.</a
                 >
               </p>
@@ -1713,7 +1743,7 @@
                 to reach out at
                 <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me </a>
                 or let's chat<br />on
-                <a href="https://www.linkedin.com/in/ayush-chandra/"
+                <a href="https://www.linkedin.com/in/designedbyayush/"
                   >LinkedIn.</a
                 >
               </p>
@@ -1909,7 +1939,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -1919,7 +1949,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -1929,7 +1959,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -1939,7 +1969,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -1948,14 +1978,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
