--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -252,7 +252,12 @@
         <div class="container">
           <div class="row">
             <div
-              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
+              class="
+                offset-xl-3
+                col-xl-6
+                offset-lg-2
+                col-lg-8 col-md-12 col-sm-12
+              "
             >
               <h1 class="inactive">I am Ayush a ui ux designer</h1>
               <p
@@ -631,7 +636,7 @@
         </div>
         <div class="all-projects">
           <a
-            href="https://www.instagram.com/_ayush_chandra/"
+            href="https://www.instagram.com/designedbyayush/"
             class="main-button-slider"
             title="See all projects"
             aria-label="See all projects"
@@ -1139,7 +1144,7 @@
           >
             <div class="pricing-item active" tabindex="0">
               <div class="pricing-header">
-                <h3 class="pricing-title">Standard</h3>
+                <h3 class="pricing-title">Strategy</h3>
               </div>
               <div class="pricing-body">
                 <div class="price-wrapper">
@@ -1148,13 +1153,11 @@
                   <span class="period">per project</span>
                 </div>
                 <ul class="list">
-                  <li class="active">Strategy</li>
-                  <li class="active">Consultation</li>
-                  <li class="active">UX Research</li>
-                  <li class="active">Visual Design</li>
-                  <li class="active">UI Prototyping</li>
-                  <li class="active">Brand Copywriting</li>
-                  <li class="active">Usability Testing and QA</li>
+                  <li class="active">Product Audit</li>
+                  <li class="active">UX Consultation</li>
+                  <li class="active">Brand Discovery</li>
+                  <li class="active">Business Solutions</li>
+                  <li class="active">Product MVP and USP</li>
                 </ul>
               </div>
               <div class="pricing-footer">
@@ -1362,7 +1365,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -1372,7 +1375,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -1382,7 +1385,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -1392,7 +1395,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -1401,14 +1404,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
