--- a/mentorship.html
+++ b/mentorship.html
@@ -238,7 +238,7 @@
                 <li><a href="mentorship" class="active">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -261,7 +261,12 @@
         <div class="container">
           <div class="row">
             <div
-              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
+              class="
+                offset-xl-3
+                col-xl-6
+                offset-lg-2
+                col-lg-8 col-md-12 col-sm-12
+              "
             >
               <div class="">
                 <p
@@ -672,7 +677,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">15</span>
-                  <span class="period">Upto 1 hr</span>
+                  <span class="period">Upto 1 day</span>
                 </div>
                 <ul class="list">
                   <li class="active">Career Advice</li>
@@ -704,7 +709,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">50</span>
-                  <span class="period">Upto 4 hrs</span>
+                  <span class="period">Upto 1 week</span>
                 </div>
                 <ul class="list">
                   <li class="active">Career Advice</li>
@@ -739,7 +744,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">100</span>
-                  <span class="period">Upto 1 week</span>
+                  <span class="period">Upto 1 month</span>
                 </div>
                 <ul class="list">
                   <li class="active">Career Advice</li>
@@ -774,27 +779,29 @@
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/ayush.webp"
+              src="assets/images/why-should-i-consult-you.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto desk"
               alt="App"
-              width="400"
-              height="400"
-              title="I know this picture probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
+              width="800"
+              height="600"
             />
             <img
-              src="assets/images/ayush-mob.webp"
+              src="assets/images/why-should-i-consult-you.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto mob"
               alt="App"
-              width="400"
-              height="400"
-              title="I know this picture probably sucks, I promise I'll work on it! My camera broke so I can't take high-quality photos as of now, and I'm broke too 😭, so I can't buy a high-quality camera."
+              width="800"
+              height="600"
             />
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -842,11 +849,16 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-mobile
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/what's-in-it-for-you.webp"
+              src="assets/images/what-is-in-for-you.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
@@ -855,7 +867,11 @@
             />
           </div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -886,11 +902,16 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-desktop
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/what's-in-it-for-you.webp"
+              src="assets/images/what-is-in-for-you.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
@@ -921,7 +942,11 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1035,7 +1060,11 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1083,7 +1112,12 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-mobile
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -1096,7 +1130,11 @@
             />
           </div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1127,7 +1165,12 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+            class="
+              col-lg-5 col-md-12 col-sm-12
+              align-self-center
+              mobile-bottom-fix-big
+              show-on-desktop
+            "
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -1155,7 +1198,7 @@
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
-              src="assets/images/is-there-a-refund_.webp"
+              src="assets/images/is-there-a-refund-policy.webp"
               loading="lazy"
               class="rounded img-fluid d-block mx-auto"
               alt="App"
@@ -1165,7 +1208,11 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+            class="
+              col-lg-6 col-md-12 col-sm-12
+              align-self-center
+              mobile-top-fix
+            "
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1267,7 +1314,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -1277,7 +1324,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -1287,7 +1334,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -1297,7 +1344,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -1306,14 +1353,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
