--- a/solutions.html
+++ b/solutions.html
@@ -214,7 +214,7 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -376,7 +376,7 @@
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
-                  <li class="active">Research</li>
+                  <li class="active">UX Research</li>
                   <li class="active">Visual Design</li>
                 </ul>
               </div>
@@ -406,7 +406,6 @@
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
-                  <li class="active">Consultation</li>
                   <li class="active">UX Research</li>
                   <li class="active">Visual Design</li>
                   <li class="active">UI Prototyping</li>
@@ -441,7 +440,6 @@
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
-                  <li class="active">Consultation</li>
                   <li class="active">UX Research</li>
                   <li class="active">Visual Design</li>
                   <li class="active">UI Prototyping</li>
@@ -666,7 +664,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -676,7 +674,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -686,7 +684,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -696,7 +694,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -705,14 +703,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
