--- a/testimonials.html
+++ b/testimonials.html
@@ -225,7 +225,7 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -1059,7 +1059,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -1069,7 +1069,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -1079,7 +1079,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -1089,7 +1089,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -1098,14 +1098,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
