--- a/faqs.html
+++ b/faqs.html
@@ -214,7 +214,7 @@
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li class="inactive"><a href="faqs">FAQs</a></li>
+                <li><a href="faqs">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -242,12 +242,16 @@
               <p class="pdesk" style="margin-bottom: 50px">
                 Here are some questions which my clients usually ask.
                 <br />If have any doubts, feel free to reach me out at
-                <a href="mailto:hey@ayushkumar.me">hey@ayushkumar.me</a>
+                <a href="mailto:hey@ayushkumar.me" class="hover-violet"
+                  >hey@ayushkumar.me</a
+                >
               </p>
               <p class="pmob">
                 Here are some questions which my clients usually ask. If have
                 any doubt, feel free to reach me out at
-                <a href="mailto:hey@ayushkumar.me">hey@ayushkumar.me</a>
+                <a class="hover-violet" href="mailto:hey@ayushkumar.me"
+                  >hey@ayushkumar.me</a
+                >
               </p>
             </div>
           </div>
@@ -277,7 +281,11 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-top-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -290,22 +298,19 @@
               </div>
               <div class="left-text">
                 <p class="desk">
-                  As one size doesn't fit all, as one solution doesn't fit all,
-                  similarly one pricing doesn't apply to all businesses out
-                  there.<br /><br />
-                  I have a framework that helps me decide the budget of a
-                  project. The framework not only deals with the scope of work,
-                  but also accounts for the overall value of the project, and
-                  the complexity of the problem that we are trying to solve.<br /><br />
-                  A mom-and-pop business isn't the same as a multi-million
-                  dollar company, so they shouldn't be charged similarly. My
-                  price is based on market research as well as the value I can
-                  deliver to the company. I believe I have a solution for
-                  everyone, so even if you don't have a huge budget let's figure
-                  out together how to make the best of it!<br /><br />
-                  Btw if you are hunting for a number, I have worked with
-                  clients from $500 to $10,000. If you are looking for the
-                  different solutions I provide then you can find them
+                  I believe one fixed pricing doesn't apply to all businesses. I
+                  have a framework that helps me decide the budget of a project.
+                  It takes into account not only the scope of the project, but
+                  also the total value I can provide as well as the complexity
+                  of the problem we're trying to solve.
+                  <br /><br />
+                  I have a solution for everyone, so even if you don't have a
+                  large budget let's figure out together how to make the best of
+                  it!
+                  <br /><br />
+                  By the way, if you were looking for a number, I have worked
+                  with clients from $500 to $10,000. You can find the different
+                  solutions I provide along with their starting price
                   <a href="solutions">here.</a>
                 </p>
                 <p class="mob">
@@ -337,13 +342,18 @@
 
       <!-- ***** Features Big Item Start ***** -->
       <section
-        class="section first-section about-features"
+        class="section first-section about-features grey"
         style="padding-top: 1rem"
       >
         <div class="container">
           <div class="row">
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-mobile
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -356,7 +366,11 @@
               />
             </div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -389,7 +403,12 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-desktop
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -423,7 +442,11 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-top-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -470,11 +493,16 @@
     </div>
     <div>
       <!-- ***** Features Big Item Start ***** -->
-      <section class="section about-features" style="padding-top: 2rem">
+      <section class="section about-features grey" style="padding-top: 2rem">
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-mobile
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -487,7 +515,11 @@
               />
             </div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -518,7 +550,12 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-desktop
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -552,7 +589,11 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-top-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -587,11 +628,16 @@
       <!-- ***** Features Big Item End ***** -->
     </div>
     <div>
-      <section class="section about-features">
+      <section class="section about-features grey">
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-mobile
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -604,7 +650,11 @@
               />
             </div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -637,7 +687,12 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-desktop
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -671,7 +726,11 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-top-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -685,9 +744,9 @@
               <div class="left-text">
                 <p class="desk">
                   I provide various services from UX consultation and discovery
-                  to visual design and website development.<br /><br />
-                  You can find them
+                  to visual design and website development. You can find them
                   <a href="solutions"> here.</a>
+                  <br /><br />
                   If you have any doubt or need a custom solution, feel free to
                   reach out at
                   <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me.</a>
@@ -707,11 +766,16 @@
         </div>
       </section>
 
-      <section class="section about-features">
+      <section class="section about-features grey">
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-mobile
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -724,7 +788,11 @@
               />
             </div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -753,7 +821,12 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
+              class="
+                col-lg-5 col-md-12 col-sm-12
+                align-self-center
+                mobile-bottom-fix-big
+                show-on-desktop
+              "
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -787,7 +860,11 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
+              class="
+                col-lg-6 col-md-12 col-sm-12
+                align-self-center
+                mobile-top-fix
+              "
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -796,22 +873,22 @@
               </div>
               <div class="left-text">
                 <p class="desk">
-                  Usually, I'm filled for an upcoming week, however, you can
+                  Usually, I'm booked for an upcoming week, however, you can
                   reach me
                   <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me.</a
                   ><br /><br />
                   Ideally, we can start working within a couple of weeks,
                   however, it may take up to a month, depending upon prior
-                  commitments and situations beyond our control.
+                  commitments and circumstances beyond our control.
                 </p>
                 <p class="mob">
-                  Usually, I'm filled for an upcoming week, however, you can
+                  Usually, I'm booked for an upcoming week, however, you can
                   reach me
                   <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me.</a
                   ><br /><br />
                   Ideally, we can start working within a couple of weeks,
                   however, it may take up to a month, depending upon prior
-                  commitments and situations beyond our control.
+                  commitments and circumstances beyond our control.
                 </p>
               </div>
             </div>
@@ -1183,7 +1260,7 @@
             <ul class="social">
               <li>
                 <a
-                  href="mailto:adamayush@gmail.com"
+                  href="mailto:hey@ayushkumar.me"
                   target="_blank"
                   rel="noopener"
                   title="Email"
@@ -1193,7 +1270,7 @@
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/ayush-chandra"
+                  href="https://dribbble.com/designedbyayush"
                   target="_blank"
                   title="Dribble"
                   aria-label="Dribble"
@@ -1203,7 +1280,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.linkedin.com/in/ayush-chandra/"
+                  href="https://www.linkedin.com/in/designedbyayush/"
                   title="LinkedIn"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -1213,7 +1290,7 @@
               </li>
               <li>
                 <a
-                  href="https://www.instagram.com/_ayush_chandra/"
+                  href="https://www.instagram.com/designedbyayush/"
                   target="_blank"
                   rel="noopener"
                   aria-label="Instagram"
@@ -1222,14 +1299,14 @@
                 ></a>
               </li>
               <li>
-                <a href="#" target="_blank"
-                  ><i
-                    class="fab fa-behance"
-                    title="Behance"
-                    target="_blank"
-                    aria-label="Behance"
-                    rel="noopener"
-                  ></i
+                <a
+                  href="https://wa.link/9zahlz"
+                  target="_blank"
+                  title="Whatsapp"
+                  aria-label="Whatsapp"
+                  rel="noopener"
+                >
+                  <i class="fab fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
