--- a/faqs.html
+++ b/faqs.html
@@ -209,12 +209,12 @@
               <ul class="nav">
                 <li><a href="https://ayushkumar.me/">Home</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
-                <li><a href="about" class="active">My Story</a></li>
+                <li><a href="about">My Story</a></li>
                 <li><a href="#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li><a href="faqs">FAQs</a></li>
+                <li><a href="faqs" class="active">FAQs</a></li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
