--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
                 class=""
               >
-                Hi 👋, I'm Ayush
+                Hi <span class="waving-hand">👋</span>, I'm Ayush
               </p>
               <div
                 data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s"
